--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,29 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+img {
+  width: 250px;
+
+}
+.main{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+nav{
+  display: flex;
+  justify-content: center;
+  padding: 10px 0px;
+  width: 100%;
+  height: 50px;
+  height: fit-content;
+  background-color: antiquewhite;
+}
+
+.layout{
+  display: flex;
+  align-items: flex-start;
+  width: 100%;
 }
