--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -41,3 +41,20 @@ nav{
   width: 100%;
 }
 
+.menu-panel{
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  background-color: antiquewhite;
+}
+
+
+.dashboard{
+  width: 50%;
+  height: 500px;
+  background-color: beige;
+}
+
+.table{
+  width: 100%;
+}
