--- a/frontend/src/components/styles/menuPanel.css
+++ b/frontend/src/components/styles/menuPanel.css
@@ -1,5 +1,5 @@
 .menu-options{
-    width: 100%;
+    width: 20%;
     display: flex;
     flex-direction: column;
 }
@@ -7,4 +7,12 @@
 .menu-option{
     width: 100%;
     padding: 10px 20px;
+    background-color: transparent;
+    border: none;
+    font-weight: 500;
+}
+
+.menu-option:hover{
+    cursor: pointer;
+    background-color: aliceblue;
 }
