--- a/frontend/src/components/styles/home.css
+++ b/frontend/src/components/styles/home.css
@@ -8,3 +8,13 @@
     width: 100%;
     display: flex;
 }
+.menu-panel{
+    width: 100%;
+}
+
+.dashboard{
+    width: 100%;
+}
+.table{
+    width: 100%;
+}
